# friendlypins

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  lock.sh  project.prop  pyproject.toml  pypyrequirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini  travisenv.sh  update.py  update_docs.bat  update_docs.sh
.circleci/: config.yml
docs/: Makefile  conf.py  friendlypins.api.rst  friendlypins.board.rst  friendlypins.headers.rst  friendlypins.pin.rst  friendlypins.rst  friendlypins.scripts.fpins.rst  friendlypins.scripts.rst  friendlypins.scripts.webp2jpeg.rst  friendlypins.thumbnail.rst  friendlypins.user.rst  friendlypins.utils.console_actions.rst  friendlypins.utils.rest_io.rst  friendlypins.utils.rst  friendlypins.version.rst  index.rst  make.bat  modules.rst  requirements.txt
src/friendly_pinterest/: __init__.py  api.py
src/friendlypins/: __init__.py  api.py  board.py  exceptions.py  headers.py  pin.py  section.py  thumbnail.py  user.py  version.prop  version.py
src/friendlypins/scripts/: __init__.py  fpins.py  webp2jpeg.py
src/friendlypins/utils/: __init__.py  base_object.py  console_actions.py  rest_io.py
tests/: conftest.py  python2.reqs  python3.reqs  reference_data.json  reference_data.yaml  test_api.py  test_board.py  test_board_section.py  test_console_actions.py  test_headers.py  test_pin.py  test_rest_io.py  test_thumbnail.py  test_user.py
tests/cassettes/test_board/: test_board_properties.yaml  test_get_pins.yaml
unit_tests/: test_api.py  test_board.py  test_console_actions.py  test_headers.py  test_pin.py  test_rest_io.py  test_thumbnail.py  test_user.py
(+8 files in other folders)
